test/instance-checks-9.err.expect
test/instance-checks-9.ktn:1:1: error: expected scalar type int but got t1
test/instance-checks-9.ktn:1:1: note: t1 (type of x) is from here
test/instance-checks-9.ktn:1:13: note: int (from example) is from here

test/instance-checks-9.ktn:1:1: error: expected stack type .s2 int but got .s1 t1
test/instance-checks-9.ktn:1:32: note: t1 (type of x) is from here

test/instance-checks-9.ktn:1:1: error: expected stack type .s2 int t3 but got .s1 t1 t2
test/instance-checks-9.ktn:1:32: note: t2 (type of y) is from here
test/instance-checks-9.ktn:1:1: note: t3 (from example) is from here

test/instance-checks-9.ktn:1:1: error: expected scalar type (.s2 int t3 -> .s2 t3 t3) but got (.s1 t1 t2 -> .s1 t1 t2)
test/instance-checks-9.ktn:1:30: note: (.s1 t1 t2 -> .s1 t1 t2) is from here
test/instance-checks-9.ktn:1:13: note: (.s2 int t3 -> .s2 t3 t3) is from here
